# Monocle-M1

./: .gitignore  CMakeLists.txt  README.md  event_bus_example.py  event_bus_migration_guide.md  framework_improvements.md  main.cpp  main.py  requirements.txt
changed files/: event_bus.py
original files/: camera_class.py  frame_processor_class.py  opcua_server.py  troubleshoot_processing.py
software programs/changed files/: command_center.py  data_manager_class.py  frame_processor_class.py
software programs/original files/: Height_output_excel_generator.py  command_center.py  rev2_command_center.py  test_mail.py
software_programs/changed_files/: gui_manager_class.py
software_programs/original_files/: camera_parameters.py  custom_spinbox_class.py  data_manager_class.py  gui_manager_class.py  opcua_security_key_generator.py
