cmake_minimum_required(VERSION 3.10)
project(depth_mapping)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add executable
add_executable(depth_mapping main.cpp)

# Add include directories if needed
# include_directories(include)

# Add libraries if needed
# target_link_libraries(depth_mapping <library_name>)



